# moonraker

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  SECURITY.md  THIRD-PARTY-LICENSES  mkdocs.yml  pdm_build.py  pyproject.toml  pytest.ini  scripts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: announcement.md  bug_report.yml  config.yml  pull_request_template.md
.github/workflows/: container.yaml  publish_assets.yaml  test_code.yaml
docs/: api_changes.md  changelog.md  components.md  configuration.md  contributing.md  dev_changelog.md  doc-requirements.txt  example-home-assistant-extended.yaml  example-home-assistant.yaml  index.md  installation.md  moonraker.conf  plugins.md  printer_objects.md  user_changes.md  web_api.md
docs/dictionaries/: moonraker.txt
docs/external_api/: announcements.md  authorization.md  database.md  devices.md  extensions.md  file_manager.md  history.md  integrations.md  introduction.md  job_queue.md  jsonrpc_notifications.md  machine.md  printer.md  server.md  update_manager.md  webcams.md
docs/pymdown-extras/: collapse_code.py  setup.py
docs/src/css/: extra-950ac449d4.css  extra-950ac449d4.css.map  extras.css
docs/src/js/: compact-tables-qqTQvuZ9.js  compact-tables-qqTQvuZ9.js.map
moonraker/: __init__.py  __main__.py  app.py  authorization.py  common.py  confighelper.py  eventloop.py  klippy_connection.py  loghelper.py  moonraker.py  server.py  utils.py  websockets.py
moonraker/assets/: __init__.py  default_allowed_services  welcome.html
moonraker/components/: __init__.py  analysis.py  announcements.py  application.py  authorization.py  axes_tracking.py  button.py  data_store.py  database.py  dbus_manager.py  energy_meter.py  extensions.py  filaman.py  filament_manager.py  file_manager.py  gpio.py  history.py  http_client.py  job_queue.py  job_state.py  klipper_estimator.py  klippy_apis.py  klippy_connection.py  lane_data.py  ldap.py  machine.py  mqtt.py  notifications.py  notifier.py  oauth2.py  oauth2_device_flow.py  octoprint_compat.py  odrive_can.py  oidc.py  paneldue.py  power.py  proc_stats.py  prometheus.py  secrets.py  sensor.py  (+11 more)
moonraker/components/file_manager/: __init__.py  file_manager.py  metadata.py
moonraker/components/update_manager/: __init__.py  app_deploy.py  base_config.py  base_deploy.py  common.py  git_deploy.py  net_deploy.py  python_deploy.py  system_deploy.py  update_manager.conf  update_manager.py  web_deploy.py  zip_deploy.py
moonraker/extras/power/: __init__.py  gpio.py  homeassistant.py  homeseer.py  http.py  hue.py  klipper_device.py  loxonev1.py  mqtt.py  rf.py  shelly.py  smartthings.py  tasmota.py  tplink_smartplug.py  tplink_tapo.py
moonraker/plugins/: __init__.py  data_store.py  database.py  file_manager.py  gcode_apis.py  history.py  klippy_apis.py  machine.py  octoprint_compat.py  paneldue.py  power.py  proc_stats.py  shell_command.py  temperature_store.py  timelapse.py  update_manager.py
moonraker/scripts/: backup-database.sh  build_release.py  dbtool.py  install-moonraker.sh  make_sysdeps.py  set-policykit-rules.sh  sudo_fix.sh  sync_dependencies.py  tag-release.sh
moonraker/scripts/python_wheels/: zeroconf-0.131.0-py3-none-any.whl
moonraker/utils/: __init__.py  async_serial.py  cansocket.py  exceptions.py  filelock.py  gpg_tool.py  ioctl_macros.py  json_wrapper.py  pip_utils.py  source_info.py  sysdeps_parser.py  sysfs_devs.py  versions.py
scripts/: build-zip-release.sh  build_release.py  check_code.sh  data-path-fix.sh  dbtool.py  extract_metadata.py  fetch-apikey.sh  finish-upgrade.sh  install-moonraker.sh  moonraker-dev-reqs.txt  moonraker-requirements.txt  moonraker-speedups.txt  moonraker-start.sh  moonraker-tapo.txt  pdm_build_dist.py  pk-enum-convertor.py  restore-database.sh  set-policykit-rules.sh  sudo_fix.sh  sync_dependencies.py  system-dependencies-without-gpio.json  system-dependencies.json  uninstall-moonraker.sh  update_manager.conf  version.txt
scripts/python_wheels/: zeroconf-0.136.2-py3-none-any.whl  zeroconf-0.148.0-py3-none-any.whl
test/client/: index.html
test/client/css/: login_dialog.css
test/client/js/: json-rpc.js  main.js
tests/: conftest.py  test_config.py  test_database.py  test_git_deploy.py  test_klippy_connection.py  test_server.py  test_spoolman.py
tests/assets/klipper/: base_printer.cfg  error_printer.cfg  klipper.dict  missing_reqs.cfg
tests/assets/moonraker/: bare_db.cdb  base_server.conf  base_server_ssl.conf  invalid_config.conf  secrets.ini  secrets.json  supplemental.conf  unparsed_server.conf
tests/fixtures/: __init__.py  http_client.py  klippy_process.py  websocket_client.py
tests/mocks/: __init__.py  mock_gpio.py
