[project]
name = "moonraker"
dynamic = ["version"]
description = "API Server for Klipper"
authors = [
    {name = "Eric Callahan", email = "arksine.code@gmail.com"},
]
dependencies = [
    "tornado==6.2.0",
    "pyserial==3.4",
    "pyserial-asyncio==0.6",
    "pillow==9.3.0",
    "lmdb==1.4.1",
    "streaming-form-data==1.11.0",
    "distro==1.8.0",
    "inotify-simple==1.3.5",
    "libnacl==1.8.0",
    "paho-mqtt==1.6.1",
    "zeroconf==0.39.4",
    "preprocess-cancellation==0.2.0",
    "jinja2==3.1.2",
    "dbus-next==0.2.3",
    "apprise==1.3.0",
    "ldap3==2.9.1"
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ["klipper", "3D printing", "server", "moonraker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/Arksine/moonraker"
repository = "https://github.com/Arksine/moonraker"
documentation = "https://moonraker.readthedocs.io"
changelog = "https://moonraker.readthedocs.io/en/latest/changelog/"

[tool.pdm.version]
source = "scm"
write_to = "moonraker/__version__.py"
write_template = "__version__ = '{}'\n"

[tool.pdm.build]
excludes = ["./**/.git", "moonraker/moonraker.py"]
includes = ["moonraker"]
editable-backend = "path"
custom-hook = "scripts/pdm_build_dist.py"

[project.scripts]
moonraker = "moonraker.server:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
