[project]
name = "moonraker"
dynamic = ["version"]
description = "API Server for Klipper"
authors = [
    {name = "Eric Callahan", email = "arksine.code@gmail.com"},
]
dependencies = [
    "tornado>=6.2.0, <=6.5.1",
    "pyserial==3.4",
    "pillow>=9.5.0, <=11.1.0",
    "streaming-form-data>=1.11.0, <=1.19.1",
    "distro==1.9.0",
    "inotify-simple==1.3.5",
    "libnacl==2.1.0",
    "paho-mqtt==1.6.1",
    "zeroconf==0.131.0",
    "preprocess-cancellation==0.2.1",
    "jinja2==3.1.5",
    "dbus-fast>=2.21.3, <=2.44.1",
    "apprise==1.9.2",
    "ldap3==2.9.1",
    "python-periphery==2.4.1",
    "importlib_metadata==6.7.0 ; python_version=='3.7'",
    "importlib_metadata==8.2.0 ; python_version>='3.8'"
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ["klipper", "3D printing", "server", "moonraker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/Arksine/moonraker"
repository = "https://github.com/Arksine/moonraker"
documentation = "https://moonraker.readthedocs.io"
changelog = "https://moonraker.readthedocs.io/en/latest/changelog/"

[project.optional-dependencies]
msgspec = ["msgspec>=0.18.4 ; python_version>='3.8'"]
uvloop = ["uvloop>=0.17.0"]
speedups = [
    "msgspec>=0.18.4 ; python_version>='3.8'",
    "uvloop>=0.17.0"
]
dev = ["pre-commit"]

[tool.pdm.version]
source = "scm"
write_to = "moonraker/__version__.py"
write_template = "__version__ = '{}'\n"

[tool.pdm.build]
excludes = ["./**/.git", "moonraker/moonraker.py"]
includes = ["moonraker"]
editable-backend = "path"
custom-hook = "pdm_build.py"

[project.scripts]
moonraker = "moonraker.server:main"

[build-system]
requires = ["pdm-backend<=2.4.4"]
build-backend = "pdm.backend"
